@@ -1,3 +1,10 @@
+NEXT (TBD)
+------------------
+- fix any mutable default argument
+
+**depreciation**
+- `warp_vrt_option` is replaced by `vrt_options` in rio_tiler.reader.part (#221)
+
 2.0b5 (2020-07-31)
 ------------------
 - add more verbosity to mosaic error (#214)
